--- a/DSAA/dsaa.tex
+++ b/DSAA/dsaa.tex
@@ -391,7 +391,7 @@ These findings have been validated experimentally on two real and two artificial
 
 There are many directions to extend this work with the motivation to improve our theoretical understanding of graphical models for link prediction in complex networks. A straightforward extension is to examine the relation between the local preferential attachment and the dynamics of the latent classes. For example, some singular value of the hyperperameters, of the non-parametric priors, could lead to a very large number of classes or, at the opposite, just one class. In the latter case, the situation will be paradoxical between our results for the local preferential attachment and the global preferential attachment, which remain an open question. Furthermore, a fundamental results is the Aldous-Hoover theorem, which imply that exchangeable random graph cannot be sparse \cite{orbanz2015bayesian}. It seems intuitive that the sparsity is related in some way to how much the preferential attachment is strong in a network. Thus, The following question arise : Would it be realistic to assumes the exchangeability assumption for the local case but not in the global case, and how this fact would impact the burstiness of the global degree distribution and further the sparsity of the random graph.
 
-We believe that those questions open a way to help us developing and designing Bayesian models in order to better capture the phenomena in real social networks.
+We believe that those questions open a way to help us developing and designing Bayesian models in order to better capture the fundamental phenomena in real social networks.
 
 
 \bibliographystyle{unsrt}
